[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/left_controller.gd" type="Script" id=1]
[ext_resource path="res://assets/Hand_Right.scn" type="PackedScene" id=2]

[sub_resource type="Skin" id=2]

[sub_resource type="SphereShape" id=1]

[node name="ARVRController" type="ARVRController"]
script = ExtResource( 1 )

[node name="ray_cast" type="RayCast" parent="."]
transform = Transform( -0.0873949, -0.691424, 0.717143, 0.991592, 0.00858685, 0.12912, -0.0954344, 0.722398, 0.68486, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -10, 0 )

[node name="hand" parent="." instance=ExtResource( 2 )]
transform = Transform( -1.11771, 0.261495, 0.311638, 0, 0.911168, -0.764561, -0.406814, -0.718452, -0.856218, -0.0317479, 0.0253789, -0.0725618 )
skin = SubResource( 2 )

[node name="grab_area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="grab_area"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 1.37091e-06, 0.00297239, -0.000537634 )
shape = SubResource( 1 )

[node name="sleep_area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="sleep_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.37091e-06, 0.00297239, -0.000537634 )
shape = SubResource( 1 )

[node name="grab_pos" type="Spatial" parent="."]
